Agregué referencias al WS

--- a/LP2Soft/App.config
+++ b/LP2Soft/App.config
@@ -7,12 +7,24 @@
         <bindings>
             <basicHttpBinding>
                 <binding name="UsuariosWSPortBinding" />
+                <binding name="PublicacionesWSPortBinding" />
+                <binding name="NotificacionesWSPortBinding" />
+                <binding name="CursosWSPortBinding" />
             </basicHttpBinding>
         </bindings>
         <client>
             <endpoint address="http://localhost:8080/LP2Soft_WebServices/UsuariosWS"
                 binding="basicHttpBinding" bindingConfiguration="UsuariosWSPortBinding"
                 contract="UsuarioWS.UsuariosWS" name="UsuariosWSPort" />
+            <endpoint address="http://localhost:8080/LP2Soft_WebServices/PublicacionesWS"
+                binding="basicHttpBinding" bindingConfiguration="PublicacionesWSPortBinding"
+                contract="PublicacionesWS.PublicacionesWS" name="PublicacionesWSPort" />
+            <endpoint address="http://localhost:8080/LP2Soft_WebServices/NotificacionesWS"
+                binding="basicHttpBinding" bindingConfiguration="NotificacionesWSPortBinding"
+                contract="NotificacionesWS.NotificacionesWS" name="NotificacionesWSPort" />
+            <endpoint address="http://localhost:8080/LP2Soft_WebServices/CursosWS"
+                binding="basicHttpBinding" bindingConfiguration="CursosWSPortBinding"
+                contract="CursosWS.CursosWS" name="CursosWSPort" />
         </client>
     </system.serviceModel>
 </configuration>
