--- a/LP2Soft/LP2Soft.csproj
+++ b/LP2Soft/LP2Soft.csproj
@@ -547,8 +547,8 @@
     <EmbeddedResource Include="Tarjetas\tarjUsuario.resx">
       <DependentUpon>tarjUsuario.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="Connected Services\CursosWS\CursosWS1.wsdl" />
-    <None Include="Connected Services\CursosWS\CursosWS1.xsd">
+    <None Include="Connected Services\CursosWS\CursosWS.wsdl" />
+    <None Include="Connected Services\CursosWS\CursosWS.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Connected Services\CursosWS\LP2Soft.CursosWS.helloResponse.datasource">
@@ -557,8 +557,8 @@
     <None Include="Connected Services\NotificacionesWS\LP2Soft.NotificacionesWS.helloResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Connected Services\NotificacionesWS\NotificacionesWS1.wsdl" />
-    <None Include="Connected Services\NotificacionesWS\NotificacionesWS1.xsd">
+    <None Include="Connected Services\NotificacionesWS\NotificacionesWS.wsdl" />
+    <None Include="Connected Services\NotificacionesWS\NotificacionesWS.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Connected Services\PublicacionesWS\LP2Soft.PublicacionesWS.eliminarPostResponse.datasource">
@@ -579,11 +579,14 @@
     <None Include="Connected Services\PublicacionesWS\LP2Soft.PublicacionesWS.postGenerico.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Connected Services\PublicacionesWS\PublicacionesWS1.wsdl" />
-    <None Include="Connected Services\PublicacionesWS\PublicacionesWS1.xsd">
+    <None Include="Connected Services\PublicacionesWS\PublicacionesWS.wsdl" />
+    <None Include="Connected Services\PublicacionesWS\PublicacionesWS.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Connected Services\UsuarioWS\LP2Soft.UsuarioWS.insertarUsuarioResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\UsuarioWS\LP2Soft.UsuarioWS.listarAmigosNombreCodigoResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Connected Services\UsuarioWS\LP2Soft.UsuarioWS.listarUsuariosNombreCodigoResponse.datasource">
@@ -598,8 +601,8 @@
     <None Include="Connected Services\UsuarioWS\LP2Soft.UsuarioWS.usuario.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Connected Services\UsuarioWS\UsuariosWS1.wsdl" />
-    <None Include="Connected Services\UsuarioWS\UsuariosWS1.xsd">
+    <None Include="Connected Services\UsuarioWS\UsuariosWS.wsdl" />
+    <None Include="Connected Services\UsuarioWS\UsuariosWS.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Properties\Settings.settings">
