Ya se puede registrar las fechas

--- a/LP2Soft/App.config
+++ b/LP2Soft/App.config
@@ -6,7 +6,8 @@
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="UsuariosWSPortBinding" />
+                <binding name="UsuariosWSPortBinding" receiveTimeout="00:1:00" sendTimeout="00:1:00"
+						 maxBufferSize="2147483647" maxReceivedMessageSize="2147483647" />
                 <binding name="PublicacionesWSPortBinding" />
                 <binding name="NotificacionesWSPortBinding" />
                 <binding name="CursosWSPortBinding" />
