--- a/LP2Soft/App.config
+++ b/LP2Soft/App.config
@@ -6,17 +6,14 @@
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="UsuariosWSPortBinding" receiveTimeout="00:1:00" sendTimeout="00:1:00"
-						 maxBufferSize="2147483647" maxReceivedMessageSize="2147483647" />
+                <binding name="UsuariosWSPortBinding" receiveTimeout="00:01:00"
+                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
                 <binding name="PublicacionesWSPortBinding" />
                 <binding name="NotificacionesWSPortBinding" />
                 <binding name="CursosWSPortBinding" />
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:8080/LP2Soft_WebServices/CursosWS"
-                binding="basicHttpBinding" bindingConfiguration="CursosWSPortBinding"
-                contract="CursosWS.CursosWS" name="CursosWSPort" />
             <endpoint address="http://localhost:8080/LP2Soft_WebServices/NotificacionesWS"
                 binding="basicHttpBinding" bindingConfiguration="NotificacionesWSPortBinding"
                 contract="NotificacionesWS.NotificacionesWS" name="NotificacionesWSPort" />
@@ -26,6 +23,9 @@
             <endpoint address="http://localhost:8080/LP2Soft_WebServices/UsuariosWS"
                 binding="basicHttpBinding" bindingConfiguration="UsuariosWSPortBinding"
                 contract="UsuarioWS.UsuariosWS" name="UsuariosWSPort" />
+            <endpoint address="http://localhost:8080/LP2Soft_WebServices/CursosWS"
+                binding="basicHttpBinding" bindingConfiguration="CursosWSPortBinding"
+                contract="CursosWS.CursosWS" name="CursosWSPort" />
         </client>
     </system.serviceModel>
 </configuration>
