--- a/LP2Soft/LP2Soft.csproj
+++ b/LP2Soft/LP2Soft.csproj
@@ -380,6 +380,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tarjetas\tarjCurso.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Tarjetas\tarjCurso.Designer.cs">
+      <DependentUpon>tarjCurso.cs</DependentUpon>
+    </Compile>
     <Compile Include="Tarjetas\tarjUsuario.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -544,6 +550,9 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Tarjetas\tarjCurso.resx">
+      <DependentUpon>tarjCurso.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Tarjetas\tarjUsuario.resx">
       <DependentUpon>tarjUsuario.cs</DependentUpon>
     </EmbeddedResource>
@@ -551,7 +560,13 @@
     <None Include="Connected Services\CursosWS\CursosWS.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\CursosWS\LP2Soft.CursosWS.helloResponse.datasource">
+    <None Include="Connected Services\CursosWS\LP2Soft.CursosWS.curso.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\CursosWS\LP2Soft.CursosWS.listarCursosResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\CursosWS\LP2Soft.CursosWS.MostrarCursoResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Connected Services\NotificacionesWS\LP2Soft.NotificacionesWS.helloResponse.datasource">
