--- a/LP2Soft/LP2Soft.csproj
+++ b/LP2Soft/LP2Soft.csproj
@@ -348,6 +348,12 @@
     <Compile Include="Perfil\frmPerfil_Resenias.Designer.cs">
       <DependentUpon>frmPerfil_Resenias.cs</DependentUpon>
     </Compile>
+    <Compile Include="Profesor\frmProfesor_Buscar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Profesor\frmProfesor_Buscar.Designer.cs">
+      <DependentUpon>frmProfesor_Buscar.cs</DependentUpon>
+    </Compile>
     <Compile Include="Profesor\frmProfesores.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -380,6 +386,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tarjetas\tarjProfesor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Tarjetas\tarjProfesor.Designer.cs">
+      <DependentUpon>tarjProfesor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Tarjetas\tarjUsuario.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -527,6 +539,9 @@
     <EmbeddedResource Include="Profesor\frmProfesores.resx">
       <DependentUpon>frmProfesores.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Profesor\frmProfesor_Buscar.resx">
+      <DependentUpon>frmProfesor_Buscar.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Profesor\frmProfesor_Perfil.resx">
       <DependentUpon>frmProfesor_Perfil.cs</DependentUpon>
     </EmbeddedResource>
@@ -544,6 +559,9 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Tarjetas\tarjProfesor.resx">
+      <DependentUpon>tarjProfesor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Tarjetas\tarjUsuario.resx">
       <DependentUpon>tarjUsuario.cs</DependentUpon>
     </EmbeddedResource>
@@ -551,7 +569,22 @@
     <None Include="Connected Services\CursosWS\CursosWS.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\CursosWS\LP2Soft.CursosWS.helloResponse.datasource">
+    <None Include="Connected Services\CursosWS\LP2Soft.CursosWS.curso.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\CursosWS\LP2Soft.CursosWS.listarCursosResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\CursosWS\LP2Soft.CursosWS.listarProfesoresNombreResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\CursosWS\LP2Soft.CursosWS.MostrarCursoResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\CursosWS\LP2Soft.CursosWS.mostrarProfesorResponse1.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\CursosWS\LP2Soft.CursosWS.profesor.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Connected Services\NotificacionesWS\LP2Soft.NotificacionesWS.helloResponse.datasource">
